# small-data-sf-2025

./: .gitignore  README.md  elvis.ipynb  github_pipeline.py  pyproject.toml  requirements.txt
.continue/agents/: local-config.yaml
.continue/mcpServers/: dlt.yaml
.cursor/: mcp.json
.dlt/: config.toml  example.secrets.toml  secrets.example.toml
.trunk/: trunk.yaml
1_basics/: 1_rest_api_pipeline.py  2_files_pipeline.py  3_jaffleshop_notebook.py  README.md
1_basics/data/: payments.parquet
2_extract-and-load/: README.md  github_pipeline.py
elvis/: presentation.md  presentation.py
elvis/pipelines/transformation/: testing.py
sql/: outer_join.sql  perplexity-repo_name.sql  warp.sql
