[project]
name = "small-data-sf-2025"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dlt-mcp>=0.0.4",
    "dlt[workspace]>=1.18.2",
    "dlthub>=0.18.0",
    "duckdb>=1.4.1",
    "ibis-framework>=11.0.0",
    "marimo>=0.17.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "uv>=0.9.5",
]
